# little-master

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.atl/: .skill-registry.cache.json  skill-registry.md
.claude/: .fuse_hidden000001c300000001  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/backend/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
app/backend/prisma/: schema.prisma
app/backend/scripts/: cleanup-codex-duplicates.ts
app/backend/src/: server.ts
app/desktop/: package.json
app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/desktop/src-tauri/capabilities/: default.json
app/desktop/src-tauri/src/: lib.rs
app/frontend/: Dockerfile  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
app/frontend/e2e/: campaign.spec.ts  chat.spec.ts  documents.spec.ts  helpers.ts  npc-save.spec.ts  pdf.spec.ts  upload.spec.ts
app/frontend/playwright-report/: index.html
app/mcp-server/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
app/mcp-server/src/: index.ts
data/core-rules/: dm_encounter_rules.md  gpt_reglas_dm.md
data/phb2024/: clases.md  criaturas.md  dones.md  equipo.md  especies.md  glosario.md  hechizos-completos.md  hechizos-listas.md  multiverso.md  reglas.md  trasfondos.md
scripts/: build-desktop.sh  bundle-backend.sh  download-node.sh  parse-monsters-csv.ts  prepare-resources.sh  setup.sh  test-server-smoke.sh
(+159 files in other folders)
